# tisthemachinelearner

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: 2025_06_22_custom_nnetsauce_gradient_descent.ipynb  2025_06_23_custom_nnetsauce_gradient_descent.ipynb  example.py
src/machinelearner/: base.py  classifier.py  regressor.py
src/tisthemachinelearner/: finitedifftrainer.py
